<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr01_20171.lab1.PersonalInfo"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_component"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/et_nombres"
        android:hint="@string/nombres"
        android:drawableLeft="@drawable/ic_account" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_component"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/et_apellidos"
        android:hint="@string/apellido"
        android:drawableLeft="@drawable/ic_account" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_component"
        android:gravity="center_vertical">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sexo"
            android:id="@+id/tv_sexo"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_gender_male_female"
            android:gravity="center_vertical" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_weight="2">

            <RadioButton
                android:text="@string/femenino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rb_femenino"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/masculino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rb_masculino"
                android:layout_weight="1" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_component"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="1dp"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/fecha_nacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fecha_nacimiento"
                android:drawableLeft="@drawable/ic_calendar" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="1dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/et_fecha_nacimiento"
                android:enabled="false"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/cambiar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cambiar" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_component"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/grado_escolar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_grado_escolaridad"
                android:drawableLeft="@drawable/ic_school"
                android:gravity="center_vertical" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sp_grado_escolaridad" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></LinearLayout>

        <Button
            android:text="@string/siguiente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_siguiente"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
