<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr01_20171.lab1.PersonalInfo"
    android:orientation="vertical"
    android:id="@+id/activity_other_info">

    <TextView
        android:text="@string/pasa_tiempos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pasa_tiempos" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_leer"
            android:numStars="5"
            android:stepSize="0.2"
            android:rating="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:text="@string/leer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_leer"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <CheckBox
            android:text="@string/ver_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_verTv"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_ver_tv"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_bailar"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:text="@string/Bailar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_bailar"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_cantar"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:text="@string/cantar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_cantar"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_nadar"
            android:numStars="5"
            android:stepSize="0.5"
            android:rating="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:text="@string/nadar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_nadar"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="match_parent">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="240dp"
            android:layout_height="match_parent">

            <Button
                android:text="@string/mostrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_mostrar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
