<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr01_20171.lab1.PersonalInfo"
    android:orientation="vertical"
    >

    <TextView
            android:text="@string/pasa_tiempos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pasa_tiempos" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="120dp"
                android:layout_height="match_parent">
                //android:layout_weight ="1"

                <CheckBox
                    android:text="@string/leer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox2" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="240dp"
                android:layout_height="match_parent">
                //android:layout_weight ="1"


                    <RatingBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ratingLeer"
                        android:layout_below="@+id/verTv"
                        android:layout_centerHorizontal="true"
                        android:numStars="5"
                        android:stepSize="0.2"
                        android:rating=""/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="120dp"
                android:layout_height="match_parent">

                <CheckBox
                    android:text="@string/ver_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox3" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="240dp"
                android:layout_height="match_parent">

                <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBarVerTv"
                android:layout_below="@+id/verTv"
                android:layout_centerHorizontal="true"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating=""/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="120dp"
                android:layout_height="match_parent">

                <CheckBox
                    android:text="@string/Bailar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox4" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="240dp"
                android:layout_height="match_parent">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBailar"
                    android:layout_below="@+id/verTv"
                    android:layout_centerHorizontal="true"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:rating=""/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="120dp"
                android:layout_height="match_parent">

                <CheckBox
                    android:text="@string/cantar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox5" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="240dp"
                android:layout_height="match_parent">

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingCantar"
                    android:layout_below="@+id/verTv"
                    android:layout_centerHorizontal="true"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:rating=""/>
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="120dp"
            android:layout_height="match_parent">

            <CheckBox
                android:text="@string/nadar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox6" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="240dp"
            android:layout_height="match_parent">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingNadar"
                android:layout_below="@+id/verTv"
                android:layout_centerHorizontal="true"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating=""/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="120dp"
                android:layout_height="match_parent">

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="240dp"
                android:layout_height="match_parent">

                <Button
                    android:text="Mostrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_mostrar" />
            </LinearLayout>
        </LinearLayout>

</LinearLayout>
